"IndexController. Таблица и вид" [#2092]

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ sudo: false
 services:
 - postgresql
 
+before_install:
+- psql -c "CREATE DATABASE accident;" -U postgres
+
 # Отправлять уведомление на почту youremail@smtp.ru (изменить на свою), если сборка упала
 notifications:
   email:
