--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,13 @@
-#==================================
-# = Thymeleaf configurations
-#==================================
+logging.level.root=info
+debug=true
+spring.thymeleaf.encoding=UTF-8
+#spring.mvc.static-path-pattern=/**
+#spring.resources.static-locations=classpath:/templates/,classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,classpath:/
+spring.thymeleaf.check-template-location=true
+#spring.main.allow-bean-definition-overriding=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+spring.thymeleaf.servlet.content-type=text/html
 spring.thymeleaf.cache=false
-spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.mode=HTML
 server.port=8765
